--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,5 +1,17 @@
-<div class="task">
-    <h3>{{ task.text }}<fa-icon [icon]="faTimes" [ngStyle]="{'color': 'red'}"></fa-icon>
-    </h3>
-    <p>{{ task.day }}</p>
+<div
+  [ngClass]="{ reminder: task.reminder }"
+  class="task"
+  (dblclick)="onToggle(task)"
+>
+  <h3>
+    {{ task.text }}
+    <fa-icon
+      (click)="onDeleteClick(task)"
+      [icon]="faTimes"
+      [ngStyle]="{ color: 'red' }"
+    >
+    </fa-icon>
+  </h3>
+  <hr />
+  <p>{{ task.day }}</p>
 </div>
