--- a/src/app/components/task-item/task-item.component.css
+++ b/src/app/components/task-item/task-item.component.css
@@ -3,10 +3,17 @@
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
+  border-left: 5px solid blue;
+  border-right: 1px solid blue;
 }
 
 .task.reminder {
   border-left: 5px solid green;
+  border-right: 1px solid green;
+}
+
+.task.noreminder {
+  border-left: 5px solid blue;
 }
 
 .task h3 {
